--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -17,25 +17,25 @@ import Footer from "../components/Footer.astro";
     <meta name="twitter:image" content="/og.jpg" />
     <meta
       name="description"
-      content="Join us for the Indonesia Software Developer Conference (IDSW) on 16-17th November, 2024. Hear thought-provoking keynotes from industry leaders and network with fellow developers at GetCourse Hall, Jakarta Selatan."
+      content="Join us for the Indonesia Software Developer Conference (IDSW) on November, 2025. Hear thought-provoking keynotes from industry leaders and network with fellow developers."
     />
     <meta
       name="keywords"
-      content="Indonesia Software Developer Conference, IDSW, software development, conference, Jakarta, 2024, developers, networking, industry leaders"
+      content="Indonesia Software Developer Conference, IDSW, software development, conference, Jakarta, 2025, developers, networking, industry leaders"
     />
     <meta name="author" content="IDSW Organizers" />
-    <meta property="og:title" content="Indonesia Software Developer Conference 2024" />
+    <meta property="og:title" content="Indonesia Software Developer Conference 2025" />
     <meta
       property="og:description"
-      content="Join us for the Indonesia Software Developer Conference (IDSW) on 16-17th November, 2024. Hear thought-provoking keynotes from industry leaders and network with fellow developers at GetCourse Hall, Jakarta Selatan."
+      content="Join us for the Indonesia Software Developer Conference (IDSW) on 16-17th November, 2025. Hear thought-provoking keynotes from industry leaders and network with fellow developers at GetCourse Hall, Jakarta Selatan."
     />
     <meta property="og:url" content="https://www.idsw.dev" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="IDSW" />
-    <meta name="twitter:title" content="Indonesia Software Developer Conference 2024" />
+    <meta name="twitter:title" content="Indonesia Software Developer Conference 2025" />
     <meta
       name="twitter:description"
-      content="Join us for the Indonesia Software Developer Conference (IDSW) on 16-17th November, 2024. Hear thought-provoking keynotes from industry leaders and network with fellow developers at GetCourse Hall, Jakarta Selatan."
+      content="Join us for the Indonesia Software Developer Conference (IDSW) on 16-17th November, 2025. Hear thought-provoking keynotes from industry leaders and network with fellow developers at GetCourse Hall, Jakarta Selatan."
     />
 
     <title>IDSW</title>
