refactor: restructure project based on year

--- a/src/2024/components/CardSpeaker.astro
+++ b/src/2024/components/CardSpeaker.astro
@@ -35,7 +35,7 @@ if (!image) {
                   target="_blank"
                   rel="noopener noreferrer"
                   class="flex min-h-8 min-w-8 items-center rounded bg-[#0C3572] p-2">
-                  <img src="/icons/x.svg" alt="X" class="h-4 w-4" />
+                  <img src="/2024/icons/x.svg" alt="X" class="h-4 w-4" />
                 </a>
               </li>
             );
@@ -47,7 +47,7 @@ if (!image) {
                   target="_blank"
                   rel="noopener noreferrer"
                   class="flex min-h-8 min-w-8 items-center rounded bg-[#0C3572] p-2">
-                  <img src="/icons/fb.svg" alt="Facebook" class="h-4 w-4" />
+                  <img src="/2024/icons/fb.svg" alt="Facebook" class="h-4 w-4" />
                 </a>
               </li>
             );
@@ -59,7 +59,7 @@ if (!image) {
                   target="_blank"
                   rel="noopener noreferrer"
                   class="flex min-h-8 min-w-8 items-center rounded bg-[#0C3572] p-2">
-                  <img src="/icons/linkedin.svg" alt="LinkedIn" class="h-4 w-4" />
+                  <img src="/2024/icons/linkedin.svg" alt="LinkedIn" class="h-4 w-4" />
                 </a>
               </li>
             );
