--- a/src/2024/styles.css
+++ b/src/2024/styles.css
@@ -14,6 +14,7 @@ html {
     --color-dark: 8 7 22;
     --color-text: 255 255 255;
     --color-body: 230 230 230;
+    --color-lightblue: 28 122 255;
   }
 
   .bg-glass {
