update: modify conference announcement for IDSW 2024

--- a/src/pages/2024/index.astro
+++ b/src/pages/2024/index.astro
@@ -66,19 +66,12 @@ const sponsorImages = await Astro.glob<{ default: ImageMetadata }>(
                 className="text-xl md:gap-5 md:text-xl xl:gap-10 xl:text-2xl"
               />
             </div>
-            <div class="flex flex-col gap-6 lg:flex-row">
-              <p class="text-lg font-light text-white opacity-80 md:text-xl lg:text-start">
-                Join us for the first annual conference for Indonesia software developers, where you can hear
-                thought-provoking keynotes from industry leaders and network with fellow developers.
+            <div class="flex flex-col gap-2">
+              <h2 class="text-3xl font-bold">IDSW 2024 is Over!</h2>
+              <p class="text-lg font-light opacity-80 md:text-xl lg:text-start">
+                Thank you to all our speakers, sponsors, and attendees for making the first IDSW Conference a huge
+                success!
               </p>
-              <div class="flex">
-                <Button
-                  color="primary"
-                  className="min-w-44 flex-grow self-center rounded-xl px-0 text-xl xl:text-2xl"
-                  href="https://www.loket.com/event/idsw2024">
-                  Get Tickets
-                </Button>
-              </div>
             </div>
           </div>
         </div>
