chore: update posthog-js to version 1.257.0 and move initialization script to layout.astro

--- a/src/2024/layout.astro
+++ b/src/2024/layout.astro
@@ -44,5 +44,13 @@ import "./styles.css";
       <slot />
     </main>
     <Footer />
+    <script>
+      import posthog from "posthog-js";
+      const posthogId = import.meta.env.PUBLIC_POSTHOG_ID;
+
+      posthog.init(`${posthogId}`, {
+        api_host: "https://us.i.posthog.com",
+      });
+    </script>
   </body>
 </html>
