--- a/src/2024/layout.astro
+++ b/src/2024/layout.astro
@@ -7,7 +7,7 @@ import "./styles.css";
 <html lang="en" class="dark">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/2024/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta property="og:image" content="/2024/og.jpg" />
