--- a/src/2025/layout.astro
+++ b/src/2025/layout.astro
@@ -6,7 +6,7 @@ import "./styles.css";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/2025/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta property="og:image" content="/2025/og.jpg" />
