--- a/src/2025/styles.css
+++ b/src/2025/styles.css
@@ -1,7 +1,4 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
-
+@import "tailwindcss";
 @layer base {
   :root {
     --color-primary: 28 122 255;
