feat: init hero section idsw 2025

--- a/src/2025/layout.astro
+++ b/src/2025/layout.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource-variable/inter";
 import "./styles.css";
+import Header from "./components/Header";
 ---
 
 <html lang="en">
@@ -39,6 +40,7 @@ import "./styles.css";
   </head>
   <body>
     <main>
+      <Header></Header>
       <slot />
     </main>
     <script>
