feat: speakers and about section

--- a/src/2025/components/CardSpeaker.astro
+++ b/src/2025/components/CardSpeaker.astro
@@ -16,15 +16,13 @@ if (!image) {
 ---
 
 <div class="card mb-8">
-  <div class="card-image bg-[#0A2650]">
+  <div class="card-image bg-white p-4 lg:p-6">
     <Image src={image.default} alt={data.name} width={200} height={200} class:list={["h-full w-full object-cover"]} />
   </div>
-  <div class="card-content mt-3">
-    <div class="card-title mb-1 text-base font-bold text-white lg:text-2xl">{data.name}</div>
-    <div class="card-subtitle text-sm font-semibold text-gray-200 lg:text-lg">{data.title}</div>
-    <hr class="my-2 border-[#204985]" />
-    <div class="card-subtitle text-sm text-gray-200 lg:text-lg">{data.role}</div>
-    <ul class="mt-2 flex flex-wrap gap-2">
+  <div class="card-content mt-3 text-center">
+    <div class="card-title mb-1 pt-3 text-base font-bold text-white lg:text-2xl">{data.name}</div>
+    <div class="card-subtitle text-sm text-gray-200 lg:text-lg">{data.title}</div>
+    <ul class="mt-2 flex flex-wrap justify-center gap-2">
       {
         data.socialUrl.map((url) => {
           if (url.includes("x.com")) {
@@ -34,7 +32,7 @@ if (!image) {
                   href={url}
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="flex min-h-8 min-w-8 items-center rounded bg-[#0C3572] p-2">
+                  class="flex min-h-8 min-w-8 items-center rounded p-2">
                   <img src="/2024/icons/x.svg" alt="X" class="h-4 w-4" />
                 </a>
               </li>
@@ -46,7 +44,7 @@ if (!image) {
                   href={url}
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="flex min-h-8 min-w-8 items-center rounded bg-[#0C3572] p-2">
+                  class="flex min-h-8 min-w-8 items-center rounded p-2">
                   <img src="/2024/icons/fb.svg" alt="Facebook" class="h-4 w-4" />
                 </a>
               </li>
@@ -58,7 +56,7 @@ if (!image) {
                   href={url}
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="flex min-h-8 min-w-8 items-center rounded bg-[#0C3572] p-2">
+                  class="flex min-h-8 min-w-8 items-center rounded p-2">
                   <img src="/2024/icons/linkedin.svg" alt="LinkedIn" class="h-4 w-4" />
                 </a>
               </li>
