--- a/src/2025/layout.astro
+++ b/src/2025/layout.astro
@@ -39,8 +39,8 @@ import Header from "./components/Header";
     <title>IDSW 2025</title>
   </head>
   <body>
-    <main>
-      <Header></Header>
+    <main class="font-sans">
+      <Header />
       <slot />
     </main>
     <script>
