--- a/src/components/CardSpeaker.astro
+++ b/src/components/CardSpeaker.astro
@@ -39,7 +39,7 @@ if (!image) {
                   target="_blank"
                   rel="noopener noreferrer"
                   class="flex min-h-8 min-w-8 items-center rounded p-2">
-                  <img src="/2024/icons/x.svg" alt="X" class="h-4 w-4" />
+                  <img src="/icons/x.svg" alt="X" class="h-4 w-4" />
                 </a>
               </li>
             );
@@ -51,7 +51,7 @@ if (!image) {
                   target="_blank"
                   rel="noopener noreferrer"
                   class="flex min-h-8 min-w-8 items-center rounded p-2">
-                  <img src="/2024/icons/fb.svg" alt="Facebook" class="h-4 w-4" />
+                  <img src="/icons/fb.svg" alt="Facebook" class="h-4 w-4" />
                 </a>
               </li>
             );
@@ -63,7 +63,7 @@ if (!image) {
                   target="_blank"
                   rel="noopener noreferrer"
                   class="flex min-h-8 min-w-8 items-center rounded p-2">
-                  <img src="/2024/icons/linkedin.svg" alt="LinkedIn" class="h-4 w-4" />
+                  <img src="/icons/linkedin.svg" alt="LinkedIn" class="h-4 w-4" />
                 </a>
               </li>
             );
