--- a/src/layout.astro
+++ b/src/layout.astro
@@ -7,12 +7,12 @@ import Header from "./components/Header";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/2025/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <meta property="og:image" content="/2025/og.jpg" />
+    <meta property="og:image" content="/og.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/2025/og.jpg" />
+    <meta name="twitter:image" content="/og.jpg" />
     <meta
       name="description"
       content="Join us for the Indonesia Software Developer Conference (IDSW) on 22-23rd November, 2025. Indonesia's premier software developer conference bringing together developers, engineers, and technology enthusiasts."
@@ -27,7 +27,7 @@ import Header from "./components/Header";
       property="og:description"
       content="Join us for the Indonesia Software Developer Conference (IDSW) on 22-23rd November, 2025. Indonesia's premier software developer conference bringing together developers, engineers, and technology enthusiasts."
     />
-    <meta property="og:url" content="https://www.idsw.dev/2025" />
+    <meta property="og:url" content="https://www.idsw.dev" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="IDSW" />
     <meta name="twitter:title" content="Indonesia Software Developer Conference 2025" />
@@ -36,7 +36,7 @@ import Header from "./components/Header";
       content="Join us for the Indonesia Software Developer Conference (IDSW) on 22-23rd November, 2025. Indonesia's premier software developer conference bringing together developers, engineers, and technology enthusiasts."
     />
 
-    <title>IDSW 2025</title>
+    <title>IDSW</title>
   </head>
   <body>
     <main class="font-sans">
