--- a/src/components/CardSpeaker.astro
+++ b/src/components/CardSpeaker.astro
@@ -7,8 +7,10 @@ interface Props {
 }
 
 const { data }: Props = Astro.props;
-const images = await Astro.glob<{ default: ImageMetadata }>("../data/images/speakers/*.{png,jpg,jpeg,svg,webp}");
-const image = images.find((img) => img.default.src.includes(data.imageName));
+const images = import.meta.glob<{ default: ImageMetadata }>("../data/images/speakers/*.{png,jpg,jpeg,svg,webp}", {
+  eager: true,
+});
+const image = Object.values(images).find((img) => img.default.src.includes(data.imageName));
 
 if (!image) {
   throw new Error(`"${data.imageName}" does not exist in glob: "src/data/images/speakers/*.{png,jpg,jpeg,svg,webp}"`);
