--- a/src/components/EventCard.astro
+++ b/src/components/EventCard.astro
@@ -9,10 +9,12 @@ interface Props {
 const speakerImg: Record<string, ImageMetadata> = {};
 
 const { data }: Props = Astro.props;
-const images = await Astro.glob<{ default: ImageMetadata }>("../data/images/speakers/*.{png,jpg,jpeg,svg,webp}");
+const images = import.meta.glob<{ default: ImageMetadata }>("../data/images/speakers/*.{png,jpg,jpeg,svg,webp}", {
+  eager: true,
+});
 
 data.speakers?.forEach((speaker) => {
-  let image = images.find((img) => speaker.imageName == img.default.src);
+  let image = Object.values(images).find((img) => speaker.imageName == img.default.src);
   let imageSrc;
   if (!image) imageSrc = defaultImage;
   else imageSrc = image.default;
@@ -46,7 +48,7 @@ function getSpeakerString() {
       {data.speaker.title}
     </p>
   </div> -->
-  <div class="event-card-content lg:border-t-none border-t-none border-t-white border-opacity-50 p-4">
+  <div class="event-card-content lg:border-t-none border-t-none border-opacity-50 border-t-white p-4">
     <h3 class="event-card-title mb-3 text-xl font-bold">
       {data.title}
     </h3>
