--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,8 @@ import type { Speaker } from "../@types/speakers";
 import Accordion from "../components/Accordion";
 import type { Faq } from "../@types/faq";
 
-const faq = await Astro.glob("../data/faq.json");
-const speakers = await Astro.glob("../data/speakers.json");
+const faq = import.meta.glob("../data/faq.json", { eager: true });
+const speakers = import.meta.glob("../data/speakers.json", { eager: true });
 
 const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as any).default)[0];
 const faqData: Faq[] = Object.values(faq).map((item) => (item as any).default)[0];
